# rocket

./: .gitignore  CMakeLists.txt  README.md
include/: main.hpp  main_loop.hpp  sdl_exception.hpp  smoke_sim.hpp
include/object/: globe.hpp  object.hpp  rocket.hpp
src/: main.cpp  main_loop.cpp  smoke_sim.cpp
src/object/: globe.cpp  object.cpp  rocket.cpp
